# jobcraft

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase1_tables.py  0002_job_postings.py  0003_matches.py  0004_artifacts.py  0005_eval_runs.py  0006_apply_engine.py  0007_email_sync.py  0008_experience_sort_order.py  0009_scrape_profile.py  0010_ui_prefs_company_logo.py  0011_scrape_runs.py
backend/app/: cli.py  config.py  deps.py  main.py
backend/app/api/: admin_calls.py  admin_evals.py  admin_prompts.py  answers.py  apply.py  email.py  experience.py  generation.py  jobs.py  match.py  profile.py  resume_import.py  settings.py
backend/app/apply/: browser.py  field_mapper.py  gate.py  strategies.py  types.py
backend/app/db/: base.py
backend/app/db/models/: match.py  (+16 more)
backend/app/email_sync/: __init__.py  classifier.py  crypto.py  gate.py  matching.py  provider.py
backend/app/embeddings/: base.py  fake.py  openai_adapter.py
backend/app/eval/: assertions.py  loader.py  runner.py  types.py
backend/app/extractor/: service.py  types.py
backend/app/generator/: __init__.py  pdf.py  scoring.py  service.py  types.py
backend/app/llm/: __init__.py  client.py  errors.py  pricing.py  render.py  response.py
backend/app/matcher/: service.py  types.py
backend/app/repositories/: answer_bank.py  application.py  artifact.py  email.py  eval_run.py  experience.py  job.py  llm_call.py  match.py  profile_field.py  prompt_version.py  scrape_run.py
backend/app/resume_templates/: registry.py  renderer.py
backend/app/schemas/: apply.py  apply_profile.py  artifact.py  email.py  eval.py  experience.py  job.py  match.py  observability.py  resume_import.py  scrape_profile.py  scrape_run.py  user_prefs.py
backend/app/scrapers/: base.py  dedupe.py  greenhouse.py  lever.py  linkedin.py  mycareersfuture.py  registry.py  types.py
backend/app/services/: answer_bank_match.py  apply_orchestration.py  autopilot.py  email_sync.py  embed_pipeline.py  generation.py  match_orchestration.py  nl_filters.py  resume_extract.py  scrape.py  scrape_dispatch.py
backend/app/vectorstore/: base.py  memory.py  qdrant_adapter.py
backend/app/workers/: __init__.py  apply_worker.py  email_worker.py  scrape_worker.py
backend/tests/: conftest.py  test_health.py  test_source_factory.py
backend/tests/api/: test_admin_calls.py  test_admin_evals.py  test_admin_prompts.py  test_apply.py  test_email.py  test_experience.py  test_generation.py  test_jobs.py  test_match.py  test_profile_answers.py  test_resume_import.py  test_scrape_runs.py  test_settings.py  test_status_stream.py
backend/tests/apply/: test_field_mapper.py  test_gate.py  test_strategies.py
backend/tests/db/: test_models.py
backend/tests/email_sync/: test_classifier.py  test_crypto.py  test_gate.py  test_matching.py
backend/tests/embeddings/: test_fake.py
backend/tests/eval/: test_assertions.py  test_loader.py  test_runner.py
backend/tests/extractor/: test_extractor.py
backend/tests/generator/: test_generator.py  test_scoring.py
backend/tests/llm/: test_client.py
backend/tests/matcher/: test_matcher.py
backend/tests/repositories/: test_job_list_page.py  test_profile_answer.py
backend/tests/scrapers/: test_dedupe.py  test_greenhouse.py  test_lever.py  test_nl_filters.py  test_registry.py
backend/tests/services/: test_answer_bank_match.py  test_apply_orchestration.py  test_autopilot.py  test_email_sync.py  test_embed_pipeline.py  test_generation.py  test_match_orchestration.py  test_nl_filters.py  test_resume_extract.py  test_scrape.py  test_scrape_dispatch.py
(+134 files in other folders)
