[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobcraft-backend"
version = "0.1.0"
description = "JobCraft AI job-application backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "pydantic>=2",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
    "greenlet",
    "anthropic",
    "openai",
    "jinja2",
    "pypdf>=4.0",
    "python-multipart",
    "tenacity",
    "qdrant-client>=1.9",
    "pyyaml>=6.0",
    "arq>=0.25",
    "cryptography>=42.0",
    "weasyprint>=62.0",
    # Gmail and Outlook providers — lazy-imported; package works without them.
    "google-api-python-client>=2.0",
    "msal>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "aiosqlite",
    "types-PyYAML",
]

[project.scripts]
jobcraft = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true

# Third-party SDKs without type stubs (lazy-imported in provider/worker code).
[[tool.mypy.overrides]]
module = ["googleapiclient", "googleapiclient.*", "msal", "msal.*", "google.*", "google_auth_oauthlib.*", "arq", "arq.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
